# polynomial_integral

./: .gitmodules  CMakeLists.txt  README.md  build.bat  crt_makecfg.bat  runtest.bat
Integrator/include/: integrator.tpp
Integrator/source/: integrator.cpp
tests/: test_integrator.cpp
